<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="falih.example.bukuwarungtestapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_userDetailFragment"
            app:destination="@id/userDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="falih.example.bukuwarungtestapp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/userDetailFragment"
        android:name="falih.example.bukuwarungtestapp.ui.home.userdetail.UserDetailFragment"
        android:label="@string/title_profile_detail"
        tools:layout="@layout/fragment_user_detail" />
</navigation>