<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="falih.example.bukuwarungtestapp.R"/>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="falih.example.bukuwarungtestapp.ui.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_user_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:listitem="@layout/item_user_list"
            app:layoutRes="@{R.layout.item_user_list}"
            app:items="@{viewModel.userList}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tv_no_user_found"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_user_found"
            android:textAlignment="center"
            android:visibility="@{ viewModel.listEmpty ? View.VISIBLE : View.GONE, default=gone }"
            tools:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <LinearLayout
            android:id="@+id/tv_loading_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:background="@color/colorPrimary"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <ProgressBar
                android:layout_width="20dp"
                android:layout_height="20dp" />
            <TextView
                android:text="@string/loading_data"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tv_load_more_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:padding="10dp"
            android:background="@color/colorAccent"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <ProgressBar
                android:layout_width="20dp"
                android:layout_height="20dp" />
            <TextView
                android:text="@string/loading_more_data"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
